# ai-qa-framework

./: .gitignore  CONTRIBUTING.md  GITHUB_SETTINGS.md  LICENSE  OVERVIEW.md  OriginalSpec.md  README.md  REQUIREMENTS.md  SECURITY.md  pyproject.toml  pytest.ini  qa-config.json.example  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: cli.py  orchestrator.py  url_utils.py
src/ai/: client.py
src/ai/prompts/: auth.py  evaluation.py  fallback.py  planning.py  summary.py
src/auth/: smart_auth.py
src/coverage/: gap_analyzer.py  registry.py  scorer.py  visual_baseline_registry.py
src/crawler/: crawler.py  element_extractor.py  form_analyzer.py  spa_handler.py
src/executor/: action_runner.py  assertion_checker.py  evidence_collector.py  executor.py  fallback.py  selector_resolver.py
src/models/: config.py  coverage.py  site_model.py  test_plan.py  test_result.py  visual_baseline.py
src/planner/: planner.py  schema_validator.py
src/reporter/: html_report.py  json_report.py  regression_detector.py  reporter.py
src/utils/: browser_stealth.py
tests/: README.md  conftest.py  test_ai_client.py  test_ai_prompts.py  test_api_assertion_checker.py  test_api_executor.py  test_auth_and_dynamic_vars.py  test_browser_stealth.py  test_coverage.py  test_crawler.py  test_evidence_collector.py  test_executor.py  test_executor_action_runner.py  test_executor_assertion_checker.py  test_fallback.py  test_integration.py  test_models_config.py  test_models_site.py  test_models_test_plan.py  test_models_test_result.py  test_planner_credential_injection.py  test_planner_schema_validator.py  test_reporter.py  test_reporter_html.py  test_reporter_json_report.py  test_selector_resolver.py  test_smart_auth.py
