[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-qa-framework"
version = "1.0.0"
description = "Autonomous AI-Driven Website QA Framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Brent Kastner" },
]
keywords = ["qa", "testing", "ai", "automation", "playwright", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "playwright>=1.40.0",
    "anthropic>=0.39.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "Pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
qa-framework = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/brentkastner/ai-qa-framework"
Repository = "https://github.com/brentkastner/ai-qa-framework"
Issues = "https://github.com/brentkastner/ai-qa-framework/issues"

[tool.setuptools.packages.find]
include = ["src*"]
